# damacy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  TODO.md  codecov.yml  flake.nix  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: bench.yml  build.yml  docs.yml  fuzz.yml  test.yml  tsan.yml
api/: index.html
bench/: CMakeLists.txt  README-tracking.md  gen_dataset.py  gen_manifest.py  main.c  merge_gha_bench.py  metadata_store_async_bench.c  preadreplay.c  report.py  run.py  scenario.py  sweep.py  sweep_b.py  tensorstore_bench.py  to_gha_bench.py
bench/scenarios/: blosc-zstd.json  default.json  latency-deep.json  latency-la384.json  latency-la512.json  latency-la768.json  latency-shallow.json  mixed-dtype.json  mixed-hold200.json  mixed-hold500.json  mixed.json  noisy-bursty.json  noisy-heavy.json  noisy-light.json  noisy-nfs.json  smoke.json  throughput-deep.json  throughput.json
budget/: index.html
cmake/: FindCuFile.cmake  FindNvcomp.cmake  Fuzz.cmake  Helpers.cmake  Warnings.cmake
dev/: api-design-surface-draft.md  damacy_rewrite_plan.md  damacy_rewrite_pr1.md  damacy_rewrite_pr2.md  devlog.md  fuzzing.md  json.md  metadata_prefetch.md  plan.md  reformatting-spec.md
dev/audits/: decompression-bottleneck.md  decompression-investigation.md  issue-3-gds-design.md  (+1 more)
distributed/: index.html
docs/: api-design-internals-draft.md  api-design-surface-draft.md  api.md  budget.md  devlog.md  distributed.md  index.md  optimization.md  plan.md  prefetch.md  troubleshooting.md
prefetch/: index.html
python/: CMakeLists.txt
python/damacy/: __init__.py  _api.c  _api.h  _log_sink.c  _log_sink.h  _native.c  _native.pyi
python/tests/: conftest.py  test_damacy.py  test_deferred_release.py  test_doctests.py  test_native_internals.py
search/: search_index.json
src/: CMakeLists.txt  assemble.cu  assemble.h  damacy.c  damacy.h  damacy_config.c  damacy_config.h  damacy_internal.h  damacy_lifecycle.c  damacy_limits.h  damacy_log.h  damacy_plan.c  damacy_pop.c  damacy_push.c  damacy_scheduler.c  damacy_stats.c  damacy_stats.h  damacy_status.c  decoder.c  decoder.h  dimension.c  dtype.c  limits.h  pipeline.c  pipeline.h  planner.c  planner.h  store.c  store.h  store_fs.c  store_fs.h  types.codec.c  types.codec.h  zarr.h  zarr_meta_cache.c  zarr_meta_cache.h  zarr_metadata.c  zarr_metadata.h  zarr_reader.c  zarr_shard_cache.c  (+3 more)
src/assemble/: assemble.cu  assemble.h
src/batch_pool/: batch_pool.c  batch_pool.h
src/decoder/: bitshuffle.cu  bitshuffle.h  blosc1.cu  blosc1.h  blosc1_host.c  blosc1_host.h  blosc1_parse.cu  blosc1_parse.h  decoder.c  decoder.h  decoder_check.h  decoder_lz4.c  decoder_lz4.h  decoder_memcpy.cu  decoder_memcpy.h  decoder_zstd.c  decoder_zstd.h  launch_check.cu  launch_check.h  shuffle.cu  shuffle.h  status_reduce.cu  status_reduce.h
src/dimension/: dimension.c  dimension.h
src/dtype/: dtype.c  dtype.h
src/gpu_budget/: gpu_budget.c  gpu_budget.h
src/io_queue/: io_queue.h  io_queue.posix.c
src/log/: log.c  log.h
src/lookahead/: lookahead.c  lookahead.h
src/numa/: numa.c  numa.h
src/nvtx/: nvtx.c  nvtx.h
src/planner/: coalesce.c  coalesce.h  group_chunks.c  group_chunks.h  planner.c  planner.h  read_op_sort.c  read_op_sort.h
src/platform/: numa.h  numa.posix.c  platform.h  platform.posix.c  platform_io.h  platform_io.posix.c
src/prefetch/: array_meta.c  array_meta.h  chunk_layout.c  chunk_layout.h  prefetch_cache.c  prefetch_cache.h  prefetch_handle.h  prefetcher.c  prefetcher.h  shard_index.c  shard_index.h
src/render_job/: render_job.c  render_job.h
src/scheduler/: scheduler.c  scheduler.h
src/store/: metadata_store_async.c  metadata_store_async.h  store.c  store.h  store_fs.c  store_fs.h  store_fs_gds.c  store_fs_gds.h  store_fs_gds_stub.c  store_fs_noisy.c  store_fs_noisy.h  store_internal.h  store_latency.c  store_latency.h
src/threadpool/: threadpool.c  threadpool.h
src/util/: atomic_max.h  crc32c.c  crc32c.h  cuda_check.h  hash.c  hash.h  json.c  json.h  json_writer.c  json_writer.h  lru.c  lru.h  path_intern.c  path_intern.h  pool.c  pool.h  prelude.h  slice.c  slice.h  strbuf.c  strbuf.h
src/wave/: blosc_nblocks_observer.h  compressed_input.c  compressed_input.h  fanout.c  fanout.h  host_slab.c  host_slab.h  input_slot.c  input_slot.h  input_transfer.c  input_transfer.h  wave.c  wave.h  wave_budget.c  wave_budget.h  wave_input.c  wave_input.h  wave_peel.c  wave_peel.h  wave_pool.c  wave_pool.h
src/zarr/: sample_shard_iterator.c  sample_shard_iterator.h  zarr_chunk_layout.c  zarr_chunk_layout.h  zarr_meta_cache.c  zarr_meta_cache.h  zarr_metadata.c  zarr_metadata.h  zarr_shard_cache.c  zarr_shard_cache.h  zarr_shard_index.c
tests/: CMakeLists.txt  cuda_init.c  cuda_init.h  expect.h  fixture.c  fixture.h  spin_kernel.cu  spin_kernel.h  test_array_meta.c  test_assemble.c  test_batch_pool.c  test_blosc1.c  test_chunk_layout.c  test_chunk_layout_cache.c  test_coalesce.c  test_damacy.c  test_damacy_blosc.c  test_damacy_caps.c  test_damacy_config.c  test_damacy_ctx.c  test_damacy_plan.c  test_decoder.c  test_gpu_budget.c  test_group_chunks.c  test_io_queue.c  test_json.c  test_lookahead.c  test_lru.c  test_metadata_store_async.c  test_path_intern.c  test_planner.c  test_pool.c  test_prefetch_cache.c  test_prefetcher.c  test_render_job.c  test_sample_shard_iterator.c  test_scheduler.c  test_shard_index.c  test_store_fs.c  test_store_fs_gds.c  (+9 more)
tests/fuzz/: CMakeLists.txt  fuzz_blosc1_host.c  fuzz_json_input.c  fuzz_json_query.c  fuzz_shard_index.c  fuzz_zarr_metadata.c
tests/fuzz/seeds/blosc1_host/: gen_seeds.py
tests/fuzz/seeds/input/: array_mixed.json  object_nested.json  scalar_string.json  scalar_string_escaped.json  zarr_codecs.json
tests/fuzz/seeds/zarr_metadata/: missing_sharding.json  sharded_blosc_lz4.json  sharded_index_start.json  sharded_no_inner_codec.json  sharded_zstd.json  wrong_node_type.json
throughput/: data.js
timings/: data.js
troubleshooting/: index.html
(+4 files in other folders)
